--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
     /* Main Content */
     main {
       display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 40px 20px;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px 20px 20px;
       text-align: center;
-      min-height: 80vh;
     }
 
     .gem-section {
@@ -69,6 +68,7 @@
       border-radius: 10px;
       width: 100%;
       max-width: 800px;
+      margin-bottom: 40px;
     }
 
     .gem-section iframe {
@@ -76,6 +76,34 @@
       height: 400px;
       border: none;
       border-radius: 8px;
+    }
+
+    article {
+      background-color: #1a1a1a;
+      padding: 30px;
+      border-radius: 10px;
+      width: 100%;
+      max-width: 800px;
+      margin-bottom: 40px;
+    }
+
+    /* Ad Section */
+    .ad-section {
+      background-color: #111;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .ad-placeholder {
+      display: inline-block;
+      width: 300px;
+      height: 250px;
+      background-color: #333;
+      color: #ccc;
+      line-height: 250px;
+      text-align: center;
+      border-radius: 8px;
+      font-size: 16px;
     }
   </style>
 </head>
@@ -99,10 +127,22 @@
   <main>
     <div class="gem-section">
       <h2>Ask About Global Politics</h2>
-      <!-- Replace the src below with your actual Gemini Gem embed link -->
       <iframe src="https://gemini.google.com/embed/gem-id-placeholder"></iframe>
     </div>
+
+    <article>
+      <h3>Latest Geopolitical Insights</h3>
+      <p>
+        Stay informed on current international affairs and expert analyses. From shifting alliances to critical global conflicts, our platform delivers insight from respected political analysts.
+      </p>
+    </article>
   </main>
+
+  <div class="ad-section">
+    <!-- Replace with actual Google Ads code -->
+    <div class="ad-placeholder">Ad Space (Google Ads)</div>
+  </div>
 
 </body>
 </html>
+
