--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 20px;
+      padding: 10px 40px;
     }
 
     .logo {
@@ -58,16 +58,17 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 40px 20px 20px 20px;
+      padding: 40px 60px 20px;
       text-align: center;
     }
 
-    .gem-section {
+    .gem-section,
+    article {
       background-color: #222;
       padding: 30px;
       border-radius: 10px;
       width: 100%;
-      max-width: 800px;
+      max-width: 900px;
       margin-bottom: 40px;
     }
 
@@ -78,45 +79,51 @@
       border-radius: 8px;
     }
 
-    article {
-      background-color: #1a1a1a;
-      padding: 30px;
-      border-radius: 10px;
-      width: 100%;
-      max-width: 800px;
-      margin-bottom: 40px;
-    }
-
     /* Ad Section */
     .ad-section {
       background-color: #111;
-      padding: 20px;
+      padding: 30px 60px;
       text-align: center;
     }
 
     .ad-placeholder {
       display: inline-block;
-      width: 300px;
-      height: 250px;
+      width: 728px;
+      height: 90px;
       background-color: #333;
       color: #ccc;
-      line-height: 250px;
+      line-height: 90px;
       text-align: center;
       border-radius: 8px;
       font-size: 16px;
+    }
+
+    @media (max-width: 768px) {
+      .ad-placeholder {
+        width: 100%;
+        max-width: 100%;
+        height: 90px;
+        line-height: 90px;
+        font-size: 14px;
+      }
+
+      .gem-section,
+      article {
+        padding: 20px;
+      }
+
+      main,
+      .ad-section {
+        padding: 20px;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <!-- Left: Logo -->
     <img src="logo.png" alt="Logo" class="logo" />
-
-    <!-- Center: Main Title -->
     <div class="main-title">Geopolitics Advice</div>
-
-    <!-- Right: Login Form -->
     <form class="login-form">
       <input type="text" placeholder="Username" required />
       <input type="password" placeholder="Password" required />
@@ -140,9 +147,10 @@
 
   <div class="ad-section">
     <!-- Replace with actual Google Ads code -->
-    <div class="ad-placeholder">Ad Space (Google Ads)</div>
+    <div class="ad-placeholder">Ad Space (728×90)</div>
   </div>
 
 </body>
 </html>
+
 
