--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       width: 100%;
       max-width: 900px;
       margin-bottom: 40px;
+      text-align: left;
     }
 
     .gem-section iframe {
@@ -139,9 +140,13 @@
 
     <article>
       <h3>Latest Geopolitical Insights</h3>
-      <p>
-        Stay informed on current international affairs and expert analyses. From shifting alliances to critical global conflicts, our platform delivers insight from respected political analysts.
-      </p>
+      <p><strong>May 2025:</strong> The shifting dynamics in the South China Sea have reignited debates around international maritime law. China's increasing naval activity and recent military drills have prompted diplomatic protests from neighboring countries including the Philippines and Vietnam.</p>
+
+      <p>Meanwhile, the U.S. has reaffirmed its commitment to freedom of navigation operations in the region, raising tensions further. Analysts suggest that these developments could lead to a regional arms race if not carefully managed.</p>
+
+      <p>In Europe, NATO continues to expand its eastern posture in response to renewed Russian aggression in Eastern Ukraine. The alliance is now focusing on cyber defense and energy security as critical domains of deterrence. With elections approaching in several European nations, public opinion on foreign policy is becoming increasingly divided.</p>
+
+      <p>Experts recommend watching economic indicators and trade alignments closely, particularly in Africa and Latin America, where global powers are competing for strategic influence through infrastructure investments and security partnerships.</p>
     </article>
   </main>
 
@@ -152,5 +157,4 @@
 
 </body>
 </html>
-
 
