--- a/index.html
+++ b/index.html
@@ -3,139 +3,91 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Geopolitics Advice</title>
+  <title>Geopolitical Articles</title>
   <style>
     body {
-      margin: 0;
-      background-color: #000;
-      color: white;
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
     }
 
     header {
-      background-color: #444;
+      background-color: #1a237e;
+      color: white;
+      padding: 20px;
+      position: relative;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 10px 40px;
+      justify-content: space-between;
     }
 
     .logo {
-      height: 50px;
-    }
-
-    .main-title {
-      font-size: 24px;
+      font-size: 20px;
       font-weight: bold;
-      text-align: center;
-      flex: 1;
     }
 
-    .login-form {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-    }
-
-    .login-form input {
-      padding: 5px;
+    .login-btn {
+      background-color: white;
+      color: #1a237e;
       border: none;
+      padding: 8px 16px;
       border-radius: 4px;
-    }
-
-    .login-form button {
-      padding: 6px 10px;
-      background-color: #888;
-      color: white;
-      border: none;
-      border-radius: 4px;
+      font-weight: bold;
+      text-decoration: none;
       cursor: pointer;
     }
 
+    .login-btn:hover {
+      background-color: #e8eaf6;
+    }
+
     main {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px 60px 20px;
-    }
-
-    .article-container {
-      display: grid;
-      grid-template-columns: 1fr 2fr 1fr;
-      gap: 20px;
-      width: 100%;
-      max-width: 1200px;
-      margin-bottom: 40px;
-    }
-
-    .sidebar {
-      background-color: #1a1a1a;
       padding: 20px;
-      border-radius: 10px;
-      font-size: 14px;
+      max-width: 1200px;
+      margin: auto;
     }
 
-    .gem-section {
-      background-color: #222;
-      padding: 30px;
-      border-radius: 10px;
-      text-align: center;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
     }
 
-    .gem-section iframe {
-      width: 100%;
-      height: 400px;
-      border: none;
-      border-radius: 8px;
+    .article {
+      background: white;
+      padding: 15px;
+      border-radius: 6px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
 
-    article {
-      background-color: #222;
-      padding: 30px;
-      border-radius: 10px;
-      font-size: 16px;
+    .article h2 {
+      margin-top: 0;
+      color: #333;
+    }
+
+    .article p {
+      color: #555;
       line-height: 1.6;
-      width: 100%;
-      max-width: 900px;
-      margin-bottom: 40px;
     }
 
-    .ad-section {
-      background-color: #111;
-      padding: 30px 60px;
-      text-align: center;
-    }
-
-    .ad-placeholder {
-      display: inline-block;
-      width: 728px;
+    .adsense {
+      background: #eee;
       height: 90px;
-      background-color: #333;
-      color: #ccc;
-      line-height: 90px;
+      width: 728px;
+      margin: 40px auto;
       text-align: center;
-      border-radius: 8px;
-      font-size: 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px dashed #aaa;
+      border-radius: 6px;
     }
 
-    @media (max-width: 900px) {
-      .article-container {
-        grid-template-columns: 1fr;
-      }
-
-      .ad-placeholder {
+    @media (max-width: 768px) {
+      .adsense {
         width: 100%;
-        max-width: 100%;
-      }
-
-      main,
-      .ad-section {
-        padding: 20px;
-      }
-
-      article,
-      .sidebar,
-      .gem-section {
+        height: auto;
         padding: 20px;
       }
     }
@@ -144,63 +96,46 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="Logo" class="logo" />
-    <div class="main-title">Geopolitics Advice</div>
-    <form class="login-form">
-      <input type="text" placeholder="Username" required />
-      <input type="password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
+    <div class="logo">🌍 Geopolitical</div>
+    <a href="login.html" class="login-btn">Login</a>
   </header>
 
   <main>
-    <!-- Gemini embed with sidebars -->
-    <div class="article-container">
-      <!-- Left Sidebar -->
-      <div class="sidebar">
-        <h4>Related Topics</h4>
-        <ul>
-          <li>South China Sea</li>
-          <li>Cybersecurity</li>
-          <li>NATO Expansion</li>
-          <li>Trade Agreements</li>
-        </ul>
-      </div>
+    <div class="grid" id="articles"></div>
 
-      <!-- Center: Gemini -->
-      <div class="gem-section">
-        <h2>Ask About Global Politics</h2>
-        <iframe src="https://gemini.google.com/embed/gem-id-placeholder"></iframe>
-      </div>
-
-      <!-- Right Sidebar -->
-      <div class="sidebar">
-        <h4>Editor's Picks</h4>
-        <ul>
-          <li>BRICS Expansion Explained</li>
-          <li>Top 5 Conflicts to Watch</li>
-          <li>China-Africa Relations</li>
-          <li>Post-Brexit Trade Routes</li>
-        </ul>
-      </div>
+    <!-- Google AdSense Placeholder -->
+    <div class="adsense">
+      <!-- Replace with your real Google AdSense script -->
+      <strong>AdSense 728×90 Banner Ad</strong><br>
+      (Your ad will appear here)
     </div>
-
-    <!-- Main Article -->
-    <article>
-      <h3>Latest Geopolitical Insights</h3>
-      <p><strong>May 2025:</strong> The shifting dynamics in the South China Sea have reignited debates around international maritime law. China's increasing naval activity and recent military drills have prompted diplomatic protests from neighboring countries including the Philippines and Vietnam.</p>
-
-      <p>Meanwhile, the U.S. has reaffirmed its commitment to freedom of navigation operations in the region, raising tensions further. Analysts suggest that these developments could lead to a regional arms race if not carefully managed.</p>
-
-      <p>In Europe, NATO continues to expand its eastern posture in response to renewed Russian aggression in Eastern Ukraine. The alliance is now focusing on cyber defense and energy security as critical domains of deterrence. With elections approaching in several European nations, public opinion on foreign policy is becoming increasingly divided.</p>
-
-      <p>Experts recommend watching economic indicators and trade alignments closely, particularly in Africa and Latin America, where global powers are competing for strategic influence through infrastructure investments and security partnerships.</p>
-    </article>
   </main>
 
-  <div class="ad-section">
-    <div class="ad-placeholder">Ad Space (728×90)</div>
-  </div>
+  <script>
+    const topics = [
+      "Ukraine Conflict Analysis",
+      "China–Taiwan Relations",
+      "Middle East Tensions",
+      "US–Russia Diplomatic Shifts",
+      "Global Oil Market Power Plays"
+    ];
+
+    function generateArticle(topic) {
+      return `
+        <div class="article">
+          <h2>${topic}</h2>
+          <p>
+            This is a placeholder article about <strong>${topic}</strong>. 
+            In the full version, this content would be generated using your AI-powered generator. 
+            It can cover current events, analysis, and historical context related to geopolitical dynamics.
+          </p>
+        </div>
+      `;
+    }
+
+    const container = document.getElementById("articles");
+    container.innerHTML = topics.map(generateArticle).join('');
+  </script>
 
 </body>
 </html>
