--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
       font-weight: bold;
     }
 
-    .login-btn {
+    .header-buttons {
+      display: flex;
+      gap: 10px;
+    }
+
+    .login-btn, .subscribe-btn {
       background-color: white;
       color: #1a237e;
       border: none;
@@ -38,7 +43,8 @@
       cursor: pointer;
     }
 
-    .login-btn:hover {
+    .login-btn:hover,
+    .subscribe-btn:hover {
       background-color: #e8eaf6;
     }
 
@@ -97,7 +103,10 @@
 
   <header>
     <div class="logo">🌍 Geopolitical</div>
-    <a href="login.html" class="login-btn">Login</a>
+    <div class="header-buttons">
+      <a href="Subscribe.index" class="subscribe-btn">Subscribe</a>
+      <a href="login.html" class="login-btn">Login</a>
+    </div>
   </header>
 
   <main>
