--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <header>
     <div class="logo">🌍 Geopolitical</div>
     <div class="header-buttons">
-      <a href="Subscribe.index" class="subscribe-btn">Subscribe</a>
+      <a href="subscribe.html" class="subscribe-btn">Subscribe</a>
       <a href="login.html" class="login-btn">Login</a>
     </div>
   </header>
@@ -114,7 +114,6 @@
 
     <!-- Google AdSense Placeholder -->
     <div class="adsense">
-      <!-- Replace with your real Google AdSense script -->
       <strong>AdSense 728×90 Banner Ad</strong><br>
       (Your ad will appear here)
     </div>
