--- a/subscribe.html
+++ b/subscribe.html
@@ -64,8 +64,8 @@
 <body>
   <div class="subscribe-box">
     <h2>Subscribe</h2>
-    <p>Enter your bank details — it's safe with Dave</p>
-    <form action="paid.index" method="GET">
+    <p>Enter your details to proceed</p>
+    <form action="Paid.html" method="GET">
       <input type="text" name="username" placeholder="Username" required />
       <input type="password" name="password" placeholder="Password" required />
       <button type="submit">Continue</button>
@@ -73,4 +73,3 @@
   </div>
 </body>
 </html>
-
