--- a/Paid.html
+++ b/Paid.html
@@ -36,15 +36,17 @@
     }
 
     main {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 1.5rem;
       padding: 2rem;
-      max-width: 800px;
+      max-width: 1200px;
       margin: auto;
     }
 
     article {
       background-color: white;
       padding: 1.5rem;
-      margin-bottom: 1.5rem;
       border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
@@ -99,4 +101,3 @@
 
 </body>
 </html>
-
