--- a/subscribe.html
+++ b/subscribe.html
@@ -64,12 +64,14 @@
 <body>
   <div class="subscribe-box">
     <h2>Subscribe</h2>
-    <p>Enter your details to proceed</p>
-    <form action="Paid.html" method="GET">
-      <input type="text" name="username" placeholder="Username" required />
-      <input type="password" name="password" placeholder="Password" required />
-      <button type="submit">Continue</button>
-    </form>
+    <p>Enter your details to proceed, its ok dan you can trust me</p>
+   <form action="Paid.html" method="GET">
+  <input type="text" name="username" placeholder="Username" required />
+  <input type="password" name="password" placeholder="Password" required />
+  <input type="text" name="card_details" placeholder="Card Details (Optional)" />
+  <button type="submit">Continue</button>
+</form>
+
   </div>
 </body>
 </html>
